# agent-fleet-observability

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  PRODUCT.md  README.md  build.py  data.json  index.html  kanban.html  pyproject.toml  vercel.json
assets/: kanban-filter.js  kanban-modal.js  motion.js  styles.css
docs/: 2026-05-15-agent-fleet-dashboard-design.md  2026-05-18-kanban-v1-1-followups.md  2026-05-18-kanban-v1-1-plan.md  2026-05-18-kanban-v1-1-redesign.md  2026-05-19-kanban-v1-2-plan.md  manual-tickets-schema.md
lib/: activity_timeline.py  aggregations.py  anonymize.py  kanban.py  readers.py  render.py  statuses.py  svg_charts.py
schedules/: com.sean.agent-fleet-dashboard.plist
templates/: base.html  fleet.html  kanban.html
templates/partials/: activity_timeline.html  agent_grid.html  alerts_banner.html  below_fold_private.html  below_fold_public.html  footer.html  hero_regression.html  kanban_board.html  kanban_hero.html  kpi_row.html  mascot.html  topbar.html
tests/: conftest.py  test_activity_timeline.py  test_aggregations.py  test_anonymize.py  test_kanban.py  test_readers.py  test_render_smoke.py  test_svg_charts.py
tests/fixtures/: sample-council-spend-2026-05-14.json  sample-eval-last-run.md  sample-gemini-spend.json  sample-job-feed-manifest-2026-05-13.json  sample-lint-report.md  sample-research-queue.md  sample-run-history.csv  sample-synth-manifest-2026-05-12.json  sample-synth-manifest-2026-05-13.json  sample-target-companies.md  sample-tickets.md  sample-warm-intros.md
(+2 files in other folders)
